...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_main"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskRecycler"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/settingsButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
